# TheEditor

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  DESIGN.md  LICENSE.md  Makefile  filetree.c  layout.c  main.c  render.c  text.c  theeditor.h  util.c
scripts/: find_asan_dir.py
src/: Application.cpp  Application.hpp  CommonState.hpp  D2DRef.hpp  FileTree.cpp  FileTree.hpp  FileTreeComponent.cpp  FileTreeComponent.hpp  LinearMath.hpp  TheEditor.hpp  buffer.c  direct2d.cpp  direct2d.h  file_tree.rs  filetree.c  linmath.h  main.c  main.cpp  main.rs  neovim.c  neovim.h  nvim_rpc.h  render.c  text.c  the_editor.h  theeditor.h  ui.c  util.c
